extends Node
@onready var short_explosion_sound_effect: AudioStreamPlayer = %ShortExplosionSoundEffect
@onready var explosion_sound_effect: AudioStreamPlayer = %ExplosionSoundEffect
@onready var long_explosion_sound_effect: AudioStreamPlayer = %LongExplosionSoundEffect
@onready var swap_sound_effect: AudioStreamPlayer = %SwapSoundEffect
@onready var wolf_spawn_sound_effect: AudioStreamPlayer = %WolfSpawnSoundEffect